--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
     <p>&copy; 2024 LazyCrazy | All Rights Reserved</p>
 </footer>
 
-<script src="Scripts/login.js"></script>
+<script src="login.js"></script>
 </body>
 </html>
