--- a/todo.html
+++ b/todo.html
@@ -43,7 +43,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
-<script src="Scripts/todo.js"></script>
+<script src="todo.js"></script>
 
 </body>
 </html>
