--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>LazyCrazy</title>
     <link href="styles.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" href="favicon.ico" type="image/x-icon"> 
+    <link rel="icon" href="Images/favicon.png" type="image/x-icon"> 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
