--- a/todo.html
+++ b/todo.html
@@ -6,7 +6,7 @@
     <title>Todo List - LazyCrazy</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="Images/favicon.png" type="image/x-icon"> 
 </head>
 <body>
 
